fix: overflow-x to mobile space right

--- a/input.css
+++ b/input.css
@@ -7,7 +7,9 @@
     --fondo-secundario: #d7bd98;
 }
 
-html { scroll-behavior: smooth; }
+html { scroll-behavior: smooth; overflow-x: hidden; }
+
+body {overflow-x: hidden;}
 
 .primary-color-text { color: #d7bd98; }
 .secundary-color-text { color: #728761; }
